# CellularAutomataGL

./: .gitmodules  CMakeLists.txt  README.md  build.bat
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: errors.h  main.cpp
src/core/: errors.h  grid.h  logging.h
